Bug 447230 - Line tool is not working with Airbrush presets. Sometimes it's half done or the result line is not appear at all.
Summary: Line tool is not working with Airbrush presets. Sometimes it's half done or t...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
: 427080 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-19 13:38 UTC by acc4commissions
Modified: 2023-06-20 21:48 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-12-19 13:38:17 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

git 736da65

The title says it all.
It has been happening since before this git but I can't specify what version exactly.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: Win10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2021-12-19 13:40:27 UTC
I cannot reproduce this, so...

* Are you using the shortcut override to activate the line tool, or the line tool?
* Does this happen with all brush presets, or only with some
* What is the size of the image you're working on?
* Are you using a mouse or a stylus?
Comment 2 wolthera 2021-12-19 13:41:53 UTC
If this is 5.1+, then maybe it might be related to the speed-sensor changes. I cannot reproduce in 5.0, in any case.
Comment 3 acc4commissions 2021-12-20 03:30:30 UTC
Ok I found out the curprit. It was the airbrush option in the brush. Other brushes without airbrush don't cause the problem with line tool.
Comment 4 tomtomtomreportingin 2022-03-07 21:09:24 UTC
I can confirm this in 5.0.2. All it takes is enabling the Airbrush option, and lines stop appearing after the first line is made.

Additional confirmation: https://krita-artists.org/t/airbrush-modifier-issue-with-line-tool/

This also occurs in 4.4.7, but it does NOT occur in 4.2.5, as this regressive behavior apparently starts occurring in 4.2.6.
Comment 5 Bug Janitor Service 2023-06-15 15:28:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1825
Comment 6 Dmitry Kazakov 2023-06-19 09:23:59 UTC
Git commit b3af598e23b904dea41abeb01e43cb4a4cf3c914 by Dmitry Kazakov, on behalf of Freya Lupen.
Committed on 19/06/2023 at 09:23.
Pushed by dkazakov into branch 'master'.

Fix line tool with airbrush pixel engine brushes

M  +4    -0    libs/ui/tool/kis_tool_freehand_helper.cpp

https://invent.kde.org/graphics/krita/-/commit/b3af598e23b904dea41abeb01e43cb4a4cf3c914
Comment 7 Freya Lupen 2023-06-20 21:48:30 UTC
*** Bug 427080 has been marked as a duplicate of this bug. ***