Fix line tool with airbrush pixel engine brushes

BUG:447230